--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <ul>
                 <li><a href="recipes/lasagna.html">Learn how to make a decilious Lasagna</a></li></br>
                 <li><a href="recipes/tiramisu.html">Learn how to make Classic Tiramisu</a></li></br>
-                <li><a href="recipes/pestopasta.html">Learn how to make Classic Tiramisu</a></li></br>
+                <li><a href="recipes/pestopasta.html">Learn how to make Pesto Pasta</a></li></br>
             </ul>
         </div>
 
