Added CSS, still basic. Will come back!

--- a/recipes/pestopasta.html
+++ b/recipes/pestopasta.html
@@ -2,38 +2,53 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../styles.css" />
         <title>Pesto Pasta</title>
     </head>
 
     <body>
+        <div class="dropdown">
+            <button class="dropbtn">Recipes</button>
+            <div class="dropdown-content">
+                <a href="../index.html">Home</a>
+                <a href="../recipes/lasagna.html">Authentic Lasagna</a>
+                <a href="../recipes/tiramisu.html">Classic Tiramisu</a>
+                <a href="../recipes/pestopasta.html">Pesto Pasta</a>
+            </div>
+        </div>
+
         <h1>Pesto Pasta</h1>
-        <img src="../images/pestopasta.jpg" alt="Pesto-Pasta">
-            <p>Anyone can make a Pesto Pasta</br>
-               But not everyone knows how to make a pesto pasta that is slick with plenty of pesto sauce without adding tons of extra oil!</br>
-               Here is how I make it. Try this with homemade pesto. It’s amazing!.</p>
+        <img class="cover" src="../images/pestopasta.jpg" alt="Pesto-Pasta">
+            <p class="intro">Anyone can make a Pesto Pasta
+               But not everyone knows how to make a pesto pasta that is slick with plenty of pesto sauce without adding tons of extra oil!
+               Here is how I make it. Try this with homemade pesto. It is amazing!.</p>
 
         <h1>How to Make Pesto Pasta</h1>
+        <div class="content">
             <h2>Ingredients</h2>
-                <ul>
+                <ul class="ingredients">
                     <li>1 quantity homemade pesto</li>
                     <li>300 - 350 g / 10 - 12 oz pasta of choice</li>
                     <li>2 tsp salt</li>
                     <li>3/4 cup pasta cooking water</li>
                     <li>Parmesan, for serving</li>
                 </ul>
-            
+        </div>
+
+        <div class="content">
             <h2>Directions</h2>
-                <ol>
-                    <li>Bring a large pot of water to the boil with the salt.</li></br>
+                <ol class=" directions">
+                    <li>Bring a large pot of water to the boil with the salt.</li><br>
                     <li>Add pasta and cook for the length of time per the packet.</li><br>
-                    <li>Just before draining, scoop out 1 cup of of the pasta cooking water.</li></br>
-                    <li>Drain pasta in a colander, leave it for a minute.</li></br>
-                    <li>Transfer pasta to a bowl (do not use pasta cooking pot, too hot).</li></br>
-                    <li>Add pesto and 1/4 cup of pasta water. Toss to coat pasta in pesto, adding more water if required to make pasta silky and saucy, rather than dry and sticky.</li></br>
-                    <li>Taste, add more salt and pepper if desired.</li></br>
-                    <li>Serve immediately, garnished with fresh parmesan.</li></br>
-                    <li>Enjoy!</li></br>            
-                </ol> 
+                    <li>Just before draining, scoop out 1 cup of of the pasta cooking water.</li><br>
+                    <li>Drain pasta in a colander, leave it for a minute.</li><br>
+                    <li>Transfer pasta to a bowl (do not use pasta cooking pot, too hot).</li><br>
+                    <li>Add pesto and 1/4 cup of pasta water. Toss to coat pasta in pesto, adding more water if required to make pasta silky and saucy, rather than dry and sticky.</li>
+                    <li>Taste, add more salt and pepper if desired.</li><br>
+                    <li>Serve immediately, garnished with fresh parmesan.</li><br>
+                    <li>Enjoy!</li><br>      
+                </ol>
+        </div>
 
 
 
