--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="styles.css" />
         <title>Odin Recipes</title>
     </head>
 
     <body>
+        <div class="dropdown">
+            <button class="dropbtn">Recipes</button>
+            <div class="dropdown-content">
+              <a href="recipes/lasagna.html">Authentic Lasagna</a>
+              <a href="recipes/tiramisu.html">Classic Tiramisu</a>
+              <a href="recipes/pestopasta.html">Pesto Pasta</a>
+            </div>
+          </div>
+
         <h1>Odin Recipes</h1>
-        <div>
-            <ul>
-                <li><a href="recipes/lasagna.html">Learn how to make a decilious Lasagna</a></li></br>
-                <li><a href="recipes/tiramisu.html">Learn how to make Classic Tiramisu</a></li></br>
-                <li><a href="recipes/pestopasta.html">Learn how to make Pesto Pasta</a></li></br>
-            </ul>
-        </div>
 
-
-
-
-    </body>    
+    </body>  
 </html>
